# transformers

./: .gitignore  Makefile  README.md  pyproject.toml  setup.conf
src/benchmarks/: mof.py  profiles.py  profiling.py
src/experiment/: make_experiment.py  transformer_experiment.py
src/model/: base.py  gpt.py  layer.py  make.py  make_model.py  mlp.py
src/pytfex/: utils.py
src/pytfex/convolutional/: decoder.py  encoder.py  layers.py  make_model.py  resnet.py  torch_modules.py
src/pytfex/experiment/: make_experiment.py
src/pytfex/model/: attention.py  classification_head.py  embedders.py  embeddings.py  gpt.py  heads.py  layer.py  make_model.py  mask.py
src/pytfex/models/: __init__.py  basic.py  ec_moe.py  gumbel_sm_rel_attn.py  moe.py  mof.py  rel_attn.py  sparse_mlp.py  tc_moe.py
src/pytfex/transformer/: attention.py  base.py  embedders.py  gpt.py  gumbel_softmax.py  heads.py  layer.py  make_model.py  mlp.py  mlp_moe.py  moe.py  moe_ec.py  moe_tc.py  mof.py  node_array.py  node_router.py  routing_net.py  sparse_mlp.py
src/tests/: conftest.py  dataset.py  moe_model.py  test_ViT.py  test_benchmark_models.py  test_decode.py  test_embeddings.py  test_experiment_config.py  test_heads.py  test_layers.py  test_model.py  test_model_config.py  test_model_init.py  test_model_train.py  test_train.py  test_train_routing_model.py  test_transformer_model.py
src/tests/models/: __init__.py  (+7 more)
tests/: test_config.py  test_experiment_config.py  test_layers.py  test_model.py  test_model_config.py  test_train.py
tests/test_yaml/: config.yml  experiment.yml  simple.yml
(+13 files in other folders)
