[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pytfex"
authors = [
    {name = "Alex Athorne", email = "alexander.athorne@gmail.com"},
]
description = "transformer experiments written in pytorch"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["transformer", "experiments", "pytorch"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "torch",
    'importlib-metadata; python_version<"3.8"',
    "pyyaml",
    "numpy"   
]
dynamic = ["version"]